# Compainon-Test

./: Agent.md  README.md
backend/: .env  .env.example  README.md  pyproject.toml
backend/app/: gemini_client.py  main.py  speech.py
backend/companion_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/src/app/: page.tsx
frontend/src/components/: ChatPanel.tsx  VideoAvatar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: emotionMapping.ts
